--- a/3 Periodo/Programação Desktop/Projeto biblioteca2/unitdatamodule.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca2/unitdatamodule.lfm
@@ -1,9 +1,9 @@
 object DataModule1: TDataModule1
   OnCreate = DataModuleCreate
   OldCreateOrder = False
-  Height = 130
-  HorizontalOffset = 1325
-  VerticalOffset = 529
+  Height = 162
+  HorizontalOffset = 709
+  VerticalOffset = 288
   Width = 379
   object ConObra: TZConnection
     ControlsCodePage = cCP_UTF8
@@ -12,18 +12,17 @@ object DataModule1: TDataModule1
       'AutoEncodeStrings=True'
       'controls_cp=CP_UTF8'
     )
-    Connected = True
+    AfterConnect = ConObraAfterConnect
     Port = 0
-    Database = 'C:\Users\Aluno\Documents\123\Projeto biblioteca2\BibliotecaDB\BibliotecaDB.db'
+    Database = '.\BibliotecaDB\BibliotecaDB'
     Protocol = 'sqlite'
-    LibraryLocation = 'C:\Users\Aluno\Documents\123\Projeto biblioteca2\sqlite3.dll'
+    LibraryLocation = '.\sqlite3.dll'
     Left = 48
     Top = 40
   end
   object qryObra: TZQuery
     Connection = ConObra
     UpdateObject = qryUpdateObra
-    Active = True
     SQL.Strings = (
       'select * from obra'
     )
@@ -70,8 +69,54 @@ object DataModule1: TDataModule1
     end
   end
   object qryUpdateObra: TZUpdateSQL
+    DeleteSQL.Strings = (
+      'DELETE FROM obra'
+      'WHERE'
+      '  ((obra.obr_codigo IS NULL AND :OLD_obr_codigo IS NULL) OR (obra.obr_codigo = :OLD_obr_codigo))'
+    )
+    InsertSQL.Strings = (
+      'INSERT INTO obra'
+      '  (obr_codigo, titulo, tipo_obra, edt_codigo)'
+      'VALUES'
+      '  (:obr_codigo, :titulo, :tipo_obra, :edt_codigo)'
+    )
+    ModifySQL.Strings = (
+      'UPDATE obra SET'
+      '  obr_codigo = :obr_codigo,'
+      '  titulo = :titulo,'
+      '  tipo_obra = :tipo_obra,'
+      '  edt_codigo = :edt_codigo'
+      'WHERE'
+      '  ((obra.obr_codigo IS NULL AND :OLD_obr_codigo IS NULL) OR (obra.obr_codigo = :OLD_obr_codigo))'
+    )
     UseSequenceFieldForRefreshSQL = False
     Left = 208
     Top = 40
+    ParamData = <    
+      item
+        DataType = ftUnknown
+        Name = 'obr_codigo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'titulo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'tipo_obra'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'edt_codigo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'OLD_obr_codigo'
+        ParamType = ptUnknown
+      end>
   end
 end
