tela principal e os lookup feitos da parte de emprestimo

--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/backup/unitdatamodule.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/backup/unitdatamodule.lfm
@@ -1,10 +1,10 @@
 object DataModule1: TDataModule1
   OnCreate = DataModuleCreate
   OldCreateOrder = False
-  Height = 475
-  HorizontalOffset = 1036
-  VerticalOffset = 5
-  Width = 280
+  Height = 473
+  HorizontalOffset = 1103
+  VerticalOffset = 10
+  Width = 255
   object ConBiblioteca: TZConnection
     ControlsCodePage = cCP_UTF8
     AutoEncodeStrings = True
@@ -538,6 +538,7 @@ object DataModule1: TDataModule1
   object qryEmprestimo: TZQuery
     Connection = ConBiblioteca
     UpdateObject = qryUpdateEmprestimo
+    Active = True
     SQL.Strings = (
       'select * from emprestimo'
     )
