--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmobra.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmobra.lfm
@@ -1,7 +1,7 @@
 object frmObra: TfrmObra
-  Left = 404
+  Left = 745
   Height = 617
-  Top = 65
+  Top = 258
   Width = 653
   Caption = 'CRUD de Obra'
   ClientHeight = 617
@@ -67,14 +67,14 @@ object frmObra: TfrmObra
         MaxLength = 1
         TabOrder = 1
       end
-      object labelEditoraCodigo: TLabel
+      object labelEditora: TLabel
         Left = 32
         Height = 15
         Top = 104
-        Width = 95
-        Caption = 'Codigo da Editora'
+        Width = 37
+        Caption = 'Editora'
         ParentColor = False
-        OnClick = labelEditoraCodigoClick
+        OnClick = labelEditoraClick
       end
       object labelTipoObra: TLabel
         Left = 152
@@ -102,7 +102,7 @@ object frmObra: TfrmObra
         Options = []
         TabOrder = 2
       end
-      object DBLookupComboBox1: TDBLookupComboBox
+      object DBlookUpComboBoxEditora: TDBLookupComboBox
         Left = 32
         Height = 23
         Top = 132
@@ -121,8 +121,8 @@ object frmObra: TfrmObra
         Height = 336
         Top = 248
         Width = 648
-        ActivePage = tabObraAssunto
-        TabIndex = 2
+        ActivePage = tabObraExemplar
+        TabIndex = 0
         TabOrder = 4
         OnChange = PageControlObraExternasChange
         object tabObraExemplar: TTabSheet
@@ -197,7 +197,7 @@ object frmObra: TfrmObra
           ClientWidth = 640
           object DBGridObraAssunto: TDBGrid
             Left = 0
-            Height = 240
+            Height = 256
             Top = 0
             Width = 640
             Color = clWindow
