--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/backup/untfrmemprestimo.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/backup/untfrmemprestimo.lfm
@@ -1,30 +1,30 @@
 object frmEmprestimo: TfrmEmprestimo
-  Left = 686
-  Height = 419
-  Top = 119
-  Width = 536
+  Left = 422
+  Height = 494
+  Top = 136
+  Width = 652
   Caption = 'frmEmprestimo'
-  ClientHeight = 419
-  ClientWidth = 536
+  ClientHeight = 494
+  ClientWidth = 652
   OnCreate = FormCreate
   LCLVersion = '2.2.2.0'
   object PageControl1: TPageControl
     Left = 0
-    Height = 416
+    Height = 494
     Top = 0
-    Width = 536
+    Width = 652
     ActivePage = TabSheet2
     TabIndex = 1
     TabOrder = 0
     object TabSheet1: TTabSheet
       Caption = 'TabSheet1'
-      ClientHeight = 388
-      ClientWidth = 528
+      ClientHeight = 466
+      ClientWidth = 644
       object DBGridEmprestimo: TDBGrid
         Left = 0
-        Height = 388
+        Height = 470
         Top = 0
-        Width = 528
+        Width = 648
         Color = clWindow
         Columns = <>
         DataSource = dataSourceEmprestimo
@@ -33,71 +33,178 @@ object frmEmprestimo: TfrmEmprestimo
     end
     object TabSheet2: TTabSheet
       Caption = 'TabSheet2'
-      ClientHeight = 388
-      ClientWidth = 528
-      object Label6: TLabel
-        Left = 200
+      ClientHeight = 466
+      ClientWidth = 644
+      object labelDataDevolucao: TLabel
+        Left = 8
         Height = 15
-        Top = 184
+        Top = 304
         Width = 99
         Caption = 'Data de Devolução'
         ParentColor = False
       end
-      object Label5: TLabel
+      object labelDataEmprestimo: TLabel
         Left = 8
         Height = 15
-        Top = 184
+        Top = 232
         Width = 108
         Caption = 'Data do Emprestimo'
         ParentColor = False
       end
-      object Label4: TLabel
-        Left = 200
+      object labelExemplar: TLabel
+        Left = 8
         Height = 15
-        Top = 104
+        Top = 160
         Width = 49
         Caption = 'Exemplar'
         ParentColor = False
-        OnClick = Label1Click
+        OnClick = labelCodigoEmprestimoClick
       end
-      object Label3: TLabel
+      object labelObra: TLabel
         Left = 8
         Height = 15
-        Top = 104
+        Top = 88
         Width = 26
         Caption = 'Obra'
         ParentColor = False
       end
-      object Label2: TLabel
-        Left = 200
+      object labelUsuario: TLabel
+        Left = 224
         Height = 15
         Top = 16
         Width = 43
         Caption = 'Usuário '
         ParentColor = False
       end
-      object Label1: TLabel
+      object labelCodigoEmprestimo: TLabel
         Left = 8
         Height = 15
         Top = 16
         Width = 123
         Caption = 'Codigo do Emprestimo'
         ParentColor = False
-        OnClick = Label1Click
+        OnClick = labelCodigoEmprestimoClick
       end
-      object Label7: TLabel
+      object labelObservacao: TLabel
         Left = 8
         Height = 15
-        Top = 256
+        Top = 376
         Width = 62
         Caption = 'Observação'
         ParentColor = False
+      end
+      object pageControlUsuarioExemplar: TPageControl
+        Left = 224
+        Height = 344
+        Top = 120
+        Width = 416
+        ActivePage = tabUsuario
+        TabIndex = 0
+        TabOrder = 0
+        object tabUsuario: TTabSheet
+          Caption = 'Usuario'
+        end
+        object tabExemplar: TTabSheet
+          Caption = 'Exemplar'
+        end
+      end
+      object DBeditCodigoEmprestimo: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 49
+        Width = 120
+        DataField = 'emp_codigo'
+        DataSource = dataSourceEmprestimo
+        Alignment = taRightJustify
+        MaxLength = 0
+        TabOrder = 1
+      end
+      object DBeditUsuario: TDBEdit
+        Left = 224
+        Height = 23
+        Top = 48
+        Width = 184
+        DataField = 'usu_codigo'
+        DataSource = dataSourceEmprestimo
+        Alignment = taRightJustify
+        MaxLength = 0
+        TabOrder = 2
+      end
+      object DBeditObra: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 120
+        Width = 184
+        DataField = 'obr_codigo'
+        DataSource = dataSourceEmprestimo
+        Alignment = taRightJustify
+        MaxLength = 0
+        TabOrder = 3
+      end
+      object DBeditExemplar: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 192
+        Width = 184
+        DataField = 'exe_numero'
+        DataSource = dataSourceEmprestimo
+        Alignment = taRightJustify
+        MaxLength = 0
+        TabOrder = 4
+      end
+      object DBeditDataEmprestimo: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 264
+        Width = 120
+        DataField = 'data_emprestimo'
+        DataSource = dataSourceEmprestimo
+        MaxLength = 0
+        TabOrder = 5
+      end
+      object DBeditDataDevolucao: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 336
+        Width = 123
+        DataField = 'data_prevista_devolucao'
+        DataSource = dataSourceEmprestimo
+        MaxLength = 0
+        TabOrder = 6
+      end
+      object DBeditObservacao: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 408
+        Width = 184
+        DataField = 'Observacao'
+        DataSource = dataSourceEmprestimo
+        MaxLength = 0
+        TabOrder = 7
+      end
+      object DBnavigatorEmprestimo: TDBNavigator
+        Left = 224
+        Height = 28
+        Top = 88
+        Width = 281
+        BevelOuter = bvNone
+        ChildSizing.EnlargeHorizontal = crsScaleChilds
+        ChildSizing.EnlargeVertical = crsScaleChilds
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 100
+        ClientHeight = 28
+        ClientWidth = 281
+        DataSource = dataSourceEmprestimo
+        Options = []
+        TabOrder = 8
       end
     end
   end
   object dataSourceEmprestimo: TDataSource
     DataSet = DataModule1.qryEmprestimo
-    Left = 440
-    Top = 344
+    Left = 616
+    Top = 32
   end
 end
