--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmemprestimo.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/untfrmemprestimo.lfm
@@ -1,25 +1,25 @@
 object frmEmprestimo: TfrmEmprestimo
-  Left = 686
-  Height = 494
-  Top = 119
-  Width = 652
+  Left = 447
+  Height = 574
+  Top = 87
+  Width = 801
   Caption = 'frmEmprestimo'
-  ClientHeight = 494
-  ClientWidth = 652
+  ClientHeight = 574
+  ClientWidth = 801
   OnCreate = FormCreate
   LCLVersion = '2.2.2.0'
   object PageControl1: TPageControl
     Left = 0
-    Height = 494
+    Height = 574
     Top = 0
-    Width = 652
+    Width = 796
     ActivePage = TabSheet2
     TabIndex = 1
     TabOrder = 0
     object TabSheet1: TTabSheet
       Caption = 'TabSheet1'
-      ClientHeight = 466
-      ClientWidth = 644
+      ClientHeight = 546
+      ClientWidth = 788
       object DBGridEmprestimo: TDBGrid
         Left = 0
         Height = 470
@@ -33,86 +33,204 @@ object frmEmprestimo: TfrmEmprestimo
     end
     object TabSheet2: TTabSheet
       Caption = 'TabSheet2'
-      ClientHeight = 466
-      ClientWidth = 644
-      object Label6: TLabel
+      ClientHeight = 546
+      ClientWidth = 788
+      object labelDataDevolucao: TLabel
         Left = 8
         Height = 15
-        Top = 256
+        Top = 304
         Width = 99
         Caption = 'Data de Devolução'
         ParentColor = False
       end
-      object Label5: TLabel
+      object labelDataEmprestimo: TLabel
         Left = 8
         Height = 15
-        Top = 184
+        Top = 232
         Width = 108
         Caption = 'Data do Emprestimo'
         ParentColor = False
       end
-      object Label4: TLabel
-        Left = 200
+      object labelExemplar: TLabel
+        Left = 8
         Height = 15
-        Top = 104
+        Top = 160
         Width = 49
         Caption = 'Exemplar'
         ParentColor = False
-        OnClick = Label1Click
+        OnClick = labelCodigoEmprestimoClick
       end
-      object Label3: TLabel
+      object labelObra: TLabel
         Left = 8
         Height = 15
-        Top = 104
+        Top = 88
         Width = 26
         Caption = 'Obra'
         ParentColor = False
       end
-      object Label2: TLabel
-        Left = 200
+      object labelUsuario: TLabel
+        Left = 224
         Height = 15
         Top = 16
         Width = 43
         Caption = 'Usuário '
         ParentColor = False
       end
-      object Label1: TLabel
+      object labelCodigoEmprestimo: TLabel
         Left = 8
         Height = 15
         Top = 16
         Width = 123
         Caption = 'Codigo do Emprestimo'
         ParentColor = False
-        OnClick = Label1Click
+        OnClick = labelCodigoEmprestimoClick
       end
-      object Label7: TLabel
+      object labelObservacao: TLabel
         Left = 8
         Height = 15
-        Top = 328
+        Top = 376
         Width = 62
         Caption = 'Observação'
         ParentColor = False
       end
-      object PageControl2: TPageControl
-        Left = 264
-        Height = 344
+      object pageControlUsuarioExemplar: TPageControl
+        Left = 224
+        Height = 424
         Top = 120
-        Width = 376
-        ActivePage = TabSheet4
+        Width = 552
+        ActivePage = tabObra
         TabIndex = 1
         TabOrder = 0
-        object TabSheet3: TTabSheet
+        object tabUsuario: TTabSheet
           Caption = 'Usuario'
         end
-        object TabSheet4: TTabSheet
+        object tabObra: TTabSheet
+          Caption = 'Obra'
+        end
+        object tabExemplar: TTabSheet
           Caption = 'Exemplar'
         end
+      end
+      object DBeditCodigoEmprestimo: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 48
+        Width = 120
+        DataField = 'emp_codigo'
+        DataSource = dataSourceEmprestimo
+        Alignment = taRightJustify
+        MaxLength = 0
+        TabOrder = 1
+      end
+      object DBeditDataEmprestimo: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 264
+        Width = 120
+        DataField = 'data_emprestimo'
+        DataSource = dataSourceEmprestimo
+        MaxLength = 0
+        TabOrder = 2
+      end
+      object DBeditDataDevolucao: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 336
+        Width = 123
+        DataField = 'data_prevista_devolucao'
+        DataSource = dataSourceEmprestimo
+        MaxLength = 0
+        TabOrder = 3
+      end
+      object DBeditObservacao: TDBEdit
+        Left = 8
+        Height = 23
+        Top = 408
+        Width = 184
+        DataField = 'Observacao'
+        DataSource = dataSourceEmprestimo
+        MaxLength = 0
+        TabOrder = 4
+      end
+      object DBnavigatorEmprestimo: TDBNavigator
+        Left = 224
+        Height = 28
+        Top = 88
+        Width = 281
+        BevelOuter = bvNone
+        ChildSizing.EnlargeHorizontal = crsScaleChilds
+        ChildSizing.EnlargeVertical = crsScaleChilds
+        ChildSizing.ShrinkHorizontal = crsScaleChilds
+        ChildSizing.ShrinkVertical = crsScaleChilds
+        ChildSizing.Layout = cclLeftToRightThenTopToBottom
+        ChildSizing.ControlsPerLine = 100
+        ClientHeight = 28
+        ClientWidth = 281
+        DataSource = dataSourceEmprestimo
+        Options = []
+        TabOrder = 5
+      end
+      object DBlookUpComboBoxObra: TDBLookupComboBox
+        Left = 8
+        Height = 23
+        Top = 120
+        Width = 160
+        DataField = 'obr_codigo'
+        DataSource = dataSourceEmprestimo
+        KeyField = 'obr_codigo'
+        ListField = 'titulo'
+        ListFieldIndex = 0
+        ListSource = dataSourceObra
+        LookupCache = False
+        TabOrder = 6
+      end
+      object DBlookUpComboBoxExemplar: TDBLookupComboBox
+        Left = 8
+        Height = 23
+        Top = 192
+        Width = 185
+        DataField = 'exe_numero'
+        DataSource = dataSourceEmprestimo
+        ListField = 'exe_numero'
+        ListFieldIndex = 0
+        ListSource = dataSourceExemplar
+        LookupCache = False
+        TabOrder = 7
+      end
+      object DBlookUpComboBoxUsuario: TDBLookupComboBox
+        Left = 224
+        Height = 23
+        Top = 48
+        Width = 184
+        DataField = 'usu_codigo'
+        DataSource = dataSourceEmprestimo
+        KeyField = 'usu_codigo'
+        ListField = 'nome'
+        ListFieldIndex = 0
+        ListSource = dataSourceUsuario
+        LookupCache = False
+        TabOrder = 8
       end
     end
   end
   object dataSourceEmprestimo: TDataSource
     DataSet = DataModule1.qryEmprestimo
-    Left = 480
-    Top = 40
+    Left = 608
+    Top = 24
+  end
+  object dataSourceExemplar: TDataSource
+    DataSet = frmObra.qryObraExemplar
+    Left = 720
+    Top = 80
+  end
+  object dataSourceObra: TDataSource
+    DataSet = DataModule1.qryObra
+    Left = 720
+    Top = 24
+  end
+  object dataSourceUsuario: TDataSource
+    DataSet = DataModule1.qryUsuario
+    Left = 608
+    Top = 80
   end
 end
