--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/i386-win32/unitdatamodule.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/i386-win32/unitdatamodule.lfm
@@ -2,7 +2,7 @@ object DataModule1: TDataModule1
   OnCreate = DataModuleCreate
   OldCreateOrder = False
   Height = 473
-  HorizontalOffset = 1091
+  HorizontalOffset = 1061
   VerticalOffset = 15
   Width = 255
   object ConBiblioteca: TZConnection
@@ -547,8 +547,74 @@ object DataModule1: TDataModule1
     Top = 368
   end
   object qryUpdateEmprestimo: TZUpdateSQL
+    DeleteSQL.Strings = (
+      'DELETE FROM emprestimo'
+      'WHERE'
+      '  ((emprestimo.emp_codigo IS NULL AND :OLD_emp_codigo IS NULL) OR (emprestimo.emp_codigo = :OLD_emp_codigo))'
+    )
+    InsertSQL.Strings = (
+      'INSERT INTO emprestimo'
+      '  (emp_codigo, usu_codigo, obr_codigo, exe_numero, data_emprestimo, data_prevista_devolucao, '
+      '   Observacao)'
+      'VALUES'
+      '  (:emp_codigo, :usu_codigo, :obr_codigo, :exe_numero, :data_emprestimo, '
+      '   :data_prevista_devolucao, :Observacao)'
+    )
+    ModifySQL.Strings = (
+      'UPDATE emprestimo SET'
+      '  emp_codigo = :emp_codigo,'
+      '  usu_codigo = :usu_codigo,'
+      '  obr_codigo = :obr_codigo,'
+      '  exe_numero = :exe_numero,'
+      '  data_emprestimo = :data_emprestimo,'
+      '  data_prevista_devolucao = :data_prevista_devolucao,'
+      '  Observacao = :Observacao'
+      'WHERE'
+      '  ((emprestimo.emp_codigo IS NULL AND :OLD_emp_codigo IS NULL) OR (emprestimo.emp_codigo = :OLD_emp_codigo))'
+    )
     UseSequenceFieldForRefreshSQL = False
     Left = 184
     Top = 368
+    ParamData = <    
+      item
+        DataType = ftUnknown
+        Name = 'emp_codigo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'usu_codigo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'obr_codigo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'exe_numero'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'data_emprestimo'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'data_prevista_devolucao'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'Observacao'
+        ParamType = ptUnknown
+      end    
+      item
+        DataType = ftUnknown
+        Name = 'OLD_emp_codigo'
+        ParamType = ptUnknown
+      end>
   end
 end
