--- a/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/i386-win32/untfrmemprestimo.lfm
+++ b/3 Periodo/Programação Desktop/Projeto biblioteca3/lib/i386-win32/untfrmemprestimo.lfm
@@ -1,11 +1,11 @@
 object frmEmprestimo: TfrmEmprestimo
-  Left = 288
+  Left = 864
   Height = 574
-  Top = 100
-  Width = 797
+  Top = 80
+  Width = 796
   Caption = 'frmEmprestimo'
   ClientHeight = 574
-  ClientWidth = 797
+  ClientWidth = 796
   OnCreate = FormCreate
   LCLVersion = '2.2.2.0'
   object PageControl1: TPageControl
@@ -13,26 +13,26 @@ object frmEmprestimo: TfrmEmprestimo
     Height = 574
     Top = 0
     Width = 796
-    ActivePage = TabSheet2
+    ActivePage = tabEmprestimo
     TabIndex = 1
     TabOrder = 0
-    object TabSheet1: TTabSheet
-      Caption = 'TabSheet1'
+    object tabConsulta: TTabSheet
+      Caption = 'Consulta'
       ClientHeight = 546
       ClientWidth = 788
       object DBGridEmprestimo: TDBGrid
         Left = 0
-        Height = 470
+        Height = 550
         Top = 0
-        Width = 648
+        Width = 792
         Color = clWindow
         Columns = <>
         DataSource = dataSourceEmprestimo
         TabOrder = 0
       end
     end
-    object TabSheet2: TTabSheet
-      Caption = 'TabSheet2'
+    object tabEmprestimo: TTabSheet
+      Caption = 'Emprestimo'
       ClientHeight = 546
       ClientWidth = 788
       object labelDataDevolucao: TLabel
@@ -95,20 +95,56 @@ object frmEmprestimo: TfrmEmprestimo
       end
       object pageControlUsuarioExemplar: TPageControl
         Left = 224
-        Height = 424
+        Height = 430
         Top = 120
-        Width = 552
-        ActivePage = tabUsuario
-        TabIndex = 0
+        Width = 568
+        ActivePage = tabExemplar
+        TabIndex = 2
         TabOrder = 0
         object tabUsuario: TTabSheet
           Caption = 'Usuario'
+          ClientHeight = 402
+          ClientWidth = 560
+          object DBGridEmprestimoUsuario: TDBGrid
+            Left = 0
+            Height = 406
+            Top = 0
+            Width = 560
+            Color = clWindow
+            Columns = <>
+            DataSource = dataSourceUsuario
+            TabOrder = 0
+          end
         end
         object tabObra: TTabSheet
           Caption = 'Obra'
+          ClientHeight = 402
+          ClientWidth = 560
+          object DBGridEmprestimoObra: TDBGrid
+            Left = 0
+            Height = 408
+            Top = 0
+            Width = 560
+            Color = clWindow
+            Columns = <>
+            DataSource = dataSourceObra
+            TabOrder = 0
+          end
         end
         object tabExemplar: TTabSheet
           Caption = 'Exemplar'
+          ClientHeight = 402
+          ClientWidth = 560
+          object DBGrid1: TDBGrid
+            Left = 0
+            Height = 406
+            Top = 0
+            Width = 560
+            Color = clWindow
+            Columns = <>
+            DataSource = dataSourceEmprestimoExemplar
+            TabOrder = 0
+          end
         end
       end
       object DBeditCodigoEmprestimo: TDBEdit
@@ -122,26 +158,6 @@ object frmEmprestimo: TfrmEmprestimo
         MaxLength = 0
         TabOrder = 1
       end
-      object DBeditDataEmprestimo: TDBEdit
-        Left = 8
-        Height = 23
-        Top = 264
-        Width = 120
-        DataField = 'data_emprestimo'
-        DataSource = dataSourceEmprestimo
-        MaxLength = 0
-        TabOrder = 2
-      end
-      object DBeditDataDevolucao: TDBEdit
-        Left = 8
-        Height = 23
-        Top = 336
-        Width = 123
-        DataField = 'data_prevista_devolucao'
-        DataSource = dataSourceEmprestimo
-        MaxLength = 0
-        TabOrder = 3
-      end
       object DBeditObservacao: TDBEdit
         Left = 8
         Height = 23
@@ -150,7 +166,7 @@ object frmEmprestimo: TfrmEmprestimo
         DataField = 'Observacao'
         DataSource = dataSourceEmprestimo
         MaxLength = 0
-        TabOrder = 4
+        TabOrder = 2
       end
       object DBnavigatorEmprestimo: TDBNavigator
         Left = 224
@@ -168,7 +184,7 @@ object frmEmprestimo: TfrmEmprestimo
         ClientWidth = 281
         DataSource = dataSourceEmprestimo
         Options = []
-        TabOrder = 5
+        TabOrder = 3
       end
       object DBlookUpComboBoxObra: TDBLookupComboBox
         Left = 8
@@ -182,7 +198,7 @@ object frmEmprestimo: TfrmEmprestimo
         ListFieldIndex = 0
         ListSource = dataSourceObra
         LookupCache = False
-        TabOrder = 6
+        TabOrder = 4
       end
       object DBlookUpComboBoxExemplar: TDBLookupComboBox
         Left = 8
@@ -195,7 +211,7 @@ object frmEmprestimo: TfrmEmprestimo
         ListFieldIndex = 0
         ListSource = dataSourceExemplar
         LookupCache = False
-        TabOrder = 7
+        TabOrder = 5
       end
       object DBlookUpComboBoxUsuario: TDBLookupComboBox
         Left = 224
@@ -209,7 +225,44 @@ object frmEmprestimo: TfrmEmprestimo
         ListFieldIndex = 0
         ListSource = dataSourceUsuario
         LookupCache = False
+        TabOrder = 6
+      end
+      object DBdateEditEmprestimo: TDBDateEdit
+        Left = 8
+        Height = 23
+        Top = 264
+        Width = 123
+        CalendarDisplaySettings = [dsShowHeadings, dsShowDayNames]
+        DateOrder = doNone
+        ButtonWidth = 23
+        NumGlyphs = 1
+        MaxLength = 0
+        TabOrder = 7
+        DataField = 'data_emprestimo'
+        DataSource = dataSourceEmprestimo
+      end
+      object DBdateEditDataDevolucao: TDBDateEdit
+        Left = 8
+        Height = 23
+        Top = 336
+        Width = 123
+        CalendarDisplaySettings = [dsShowHeadings, dsShowDayNames]
+        DateOrder = doNone
+        ButtonWidth = 23
+        NumGlyphs = 1
+        MaxLength = 0
         TabOrder = 8
+        DataField = 'data_prevista_devolucao'
+        DataSource = dataSourceEmprestimo
+      end
+      object DBmemo: TDBMemo
+        Left = 8
+        Height = 90
+        Top = 448
+        Width = 150
+        DataField = 'Observacao'
+        DataSource = dataSourceEmprestimo
+        TabOrder = 9
       end
     end
   end
@@ -237,7 +290,6 @@ object frmEmprestimo: TfrmEmprestimo
   object qryEmprestimoExemplar: TZQuery
     Connection = DataModule1.ConBiblioteca
     UpdateObject = qryUpdateEmprestimoExemplar
-    Active = True
     SQL.Strings = (
       'select * '
       'from exemplar'
